--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@
     PASSWORDMYSQL=2NPHty3E8Kd6o4851rie
     DATABASEMYSQL=bhwjgf7w2bp03fve28ss
     PORTMYSQL=3306
+
+    SESSION_SECRETO=ccd7d1efbf32823beb0b43056d34249b
+    
